--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
-geopandas
-sparql-dataframe
+# main dependenncies
+geopandas~=1.0.1
+sparql-dataframe~=0.4
+
+# transitive dependencies
+certifi~=2025.1.31
+numpy~=2.2.2
+packaging~=24.2
+pandas~=2.2.3
+pyogrio~=0.10.0
+pyparsing~=3.2.1
+pyproj~=3.7.0
+python-dateutil~=2.9.0.post0
+pytz~=2025.1
+rdflib~=7.1.3
+shapely~=2.0.7
+six~=1.17.0
+SPARQLWrapper~=2.0.0
+tzdata~=2025.1
